--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <title>MovieProject</title>
@@ -8,6 +8,8 @@
 
     <script>
       (function () {
+                document.documentElement.setAttribute("data-theme", 'light');
+
         const storedTheme = localStorage.getItem("Theme");
         const systemPrefersDark = window.matchMedia(
           "(prefers-color-scheme: dark)"
