--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <script>
       (function () {
-                document.documentElement.setAttribute("data-theme", 'light');
+        document.documentElement.setAttribute("data-theme", "light");
 
         const storedTheme = localStorage.getItem("Theme");
         const systemPrefersDark = window.matchMedia(
@@ -34,13 +34,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
-    <div style="height: 120px;"></div>
-
+    <div style="height: 120px"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
